# SFML-Graph

./: .gitattributes  .gitignore  CMakeLists for main PC.txt  CMakeLists.txt  README.md  UIElement.cpp  UIElement.h  UIFabric.cpp  UIFabric.h  main.cpp  translator.cpp  translator.h
UIBodies/: CameraBody.cpp  CameraBody.h  DrawingBody.cpp  DrawingBody.h  RectShapeBody.cpp  RectShapeBody.h
UIElements/: UIConstructor.cpp  UIConstructor.h
UIEvents/: ButtonEvent.cpp  ButtonEvent.h  CheckBoxEvent.cpp  CheckBoxEvent.h  DefaultEvent.cpp  DefaultEvent.h  GraphNavEvent.cpp  GraphNavEvent.h  InputTextBoxEvent.cpp  InputTextBoxEvent.h  UIEvent.cpp
